# blockchain

./: LICENSE  README.md  appveyor.yml  makefile
deploy/: chain  chaind
deploy/jsmin/: jsmin.bat  readme.md
docs/: ctp.md  develop.md  develop_CN.md  keypair.md  keypair_CN.md  manual.md  manual_CN.md
src/: CMakeLists.txt
src/3rd/: README.md  README_CN.md
src/3rd/ed25519-donna/: CMakeLists.txt  Makefile.am
src/3rd/http/: CMakeLists.txt  Makefile.am
src/api/: README_CN.md  console.cpp  console.h  web_server.cpp  web_server.h  web_server_command.cpp  web_server_helper.cpp  web_server_query.cpp  web_server_update.cpp  websocket_server.cpp  websocket_server.h
src/common/: CMakeLists.txt  README_CN.md  argument.cpp  argument.h  configure_base.cpp  configure_base.h  daemon.cpp  daemon.h  data_secret_key.cpp  data_secret_key.h  general.cpp  general.h  key_store.cpp  key_store.h  network.cpp  network.h  pb2json.cpp  pb2json.h  private_key.cpp  private_key.h  storage.cpp  storage.h
src/consensus/: CMakeLists.txt  README.md  README_CN.md  bft.cpp  bft.h  bft_instance.cpp  bft_instance.h  consensus.cpp  consensus.h  consensus_manager.cpp  consensus_manager.h  consensus_msg.cpp  consensus_msg.h
src/daemon/: CMakeLists.txt  README.md  README_CN.md
src/daemon/chain/: main.cpp
src/glue/: CMakeLists.txt  README.md  README_CN.md  glue_manager.cpp  glue_manager.h  ledger_upgrade.cpp  ledger_upgrade.h  transaction_queue.cpp  transaction_queue.h  transaction_set.cpp  transaction_set.h
src/ledger/: CMakeLists.txt  README.md  README_CN.md  account.cpp  account.h  contract_manager.cpp  contract_manager.h  environment.cpp  environment.h  fee_calculate.cpp  fee_calculate.h  kv_trie.cpp  kv_trie.h  ledger_frm.cpp  ledger_frm.h  ledger_manager.cpp  ledger_manager.h  ledgercontext_manager.cpp  ledgercontext_manager.h  operation_frm.cpp  operation_frm.h  transaction_frm.cpp  transaction_frm.h  trie.cpp  trie.h
src/libchain_tools/: CMakeLists.txt  README.md  README_CN.md  lib_chain_tools.cpp  lib_chain_tools.h
src/main/: CMakeLists.txt  README.md  README_CN.md  configure.cpp  configure.h  main.cpp
src/monitor/: CMakeLists.txt  README.md  README_CN.md  monitor.cpp  monitor.h  monitor_manager.cpp  monitor_manager.h  system_manager.cpp  system_manager.h
src/overlay/: CMakeLists.txt  README.md  README_CN.md  broadcast.cpp  broadcast.h  peer.cpp  peer.h  peer_manager.cpp  peer_manager.h  peer_network.cpp  peer_network.h
src/proto/: CMakeLists.txt  README.md  README_CN.md  chain.proto  common.proto  consensus.proto  merkeltrie.proto  monitor.proto  overlay.proto  protoc-chain.bat  protoc-common.bat  protoc-consensus.bat  protoc-merkeltrie.bat  protoc-monitor.bat  protoc-overlay.bat
src/proto/cpp/: chain.pb.cc  common.pb.cc  monitor.pb.cc  monitor.pb.h  overlay.pb.cc  overlay.pb.h
src/utils/: CMakeLists.txt  README_CN.md  atom_map.h  common.h  crypto.cpp  crypto.h  ecc_sm2.cpp  ecc_sm2.h  entry_cache.h  file.cpp  file.h  headers.h  logger.cpp  logger.h  net.cpp  net.h  noncopyable.h  random.cpp  random.h  serializer.cpp  serializer.h  singleton.h  sm3.cpp  sm3.h  strings.h  system.cpp  system.h  thread.cpp  thread.h  timer.cpp  timer.h  timestamp.cpp  timestamp.h  utils.cpp  utils.h
src/web/: README.md  README_CN.md
src/web/jslint/: ContractRules.md  ContractRules_CN.md  README  adsafe.js  browser.js  function.html  help.html  index.html  report.js
test/gtest/: main.cpp
test/gtest/common/: http_client.cpp  http_client.h  web_socket_server.cpp  web_socket_server.h  websocket_test.cpp  websocket_test_nobubi.cpp
test/gtest/test/: ReadMe.txt  api_getTransactionBlob_test.cpp  base_int_test.cpp  get_block_reward_utest.cpp  libbumotools_utest.cpp  private_key_test.cpp  privatekey_test.cpp  strings_test.cpp
test/nodejs/: createAccount.js
test/testlib/: Makefile.am  channel.cpp  channel.h  test.cpp  test.h  test_json.cpp  test_leveldbwin.cpp  test_sqlite.cpp  test_v8_terminate.cpp  test_v8_terminate.h  test_websoketssl.cpp  testbubikey.cpp
